// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectGroup should match snapshot (auto-generated) 1`] = `
<div
  className="pf-c-select__menu-group ''"
>
  <div
    aria-hidden={true}
    className="pf-c-select__menu-group-title"
    id="''"
  >
    ''
  </div>
</div>
`;

exports[`select group renders with children successfully 1`] = `
<div
  className="pf-c-select__menu-group"
>
  <div
    aria-hidden={true}
    className="pf-c-select__menu-group-title"
    id=""
  >
    test
  </div>
  <div>
    child
  </div>
</div>
`;
